--- a/config/x64.config
+++ b/config/x64.config
@@ -167,7 +167,7 @@ CONFIG_GRUB_TIMEOUT="0"
 CONFIG_GRUB_TITLE="OpenWrt"
 CONFIG_VDI_IMAGES=y
 CONFIG_VMDK_IMAGES=y
-CONFIG_VHD_IMAGES=y
+CONFIG_VHD_IMAGES=n
 CONFIG_QCOW2_IMAGES=y
 CONFIG_TARGET_IMAGES_PAD=y
 CONFIG_TARGET_IMAGES_GZIP=y
