--- a/.github/workflows/IPQ40XX.yml
+++ b/.github/workflows/IPQ40XX.yml
@@ -10,8 +10,8 @@ on:
       - 'start'
   schedule:
     - cron: 0 0 * * *
-#  watch:
-#    types: [started]
+  watch:
+    types: [started]
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
