--- a/.github/workflows/IPQ40XX.yml
+++ b/.github/workflows/IPQ40XX.yml
@@ -15,6 +15,7 @@ on:
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
   REPO_BRANCH: master
   CONFIG_FILE: config/ipq40xx.config
   DIY_SH: diy.sh
